Fix spacing in global config.

--- a/src/main/resources/css/blackduck-jira.css
+++ b/src/main/resources/css/blackduck-jira.css
@@ -111,6 +111,7 @@ ul.tab li a:focus, .active {
 
 .longInput {
     max-width: 400px;
+    min-width: 120px;
     width: 100%;
     border: 1px solid #ccc;
     border-radius: 3.01px;
